--- a/.github/workflows/eks-runner-test.yml
+++ b/.github/workflows/eks-runner-test.yml
@@ -1,9 +1,8 @@
-name: EKS Runner Test
-
-on: [push]
-
 jobs:
-  test:
+  build:
     runs-on: [self-hosted]
+    strategy:
+      matrix:
+        job: [1, 2, 3, 4, 5]
     steps:
-      - run: echo "Hello from Kubernetes Pod Runner!"
+      - run: echo "Job ${{ matrix.job }}"
